<resources>
    <string name="app_name">NMedia</string>
    <string name="ok">ok</string>
    <string name="lack_of_permission">Notification about the lack of permission.</string>
    <string name="need_for_permission">Notification of the need for permission.</string>
    <string name="sorry_dialog">Unfortunately, you dont have access to the maps.</string>
    <string name="access_dialog">Your permission is required to access the maps.</string>
    <string name="remove_marker">the marker was deleted</string>
    <string name="add_marker">the marker was added</string>
    <string name="changed_marker">the marker was changed</string>
    <string name="change_marker">Change or Remove marker?</string>
    <string name="do_marker">Specify what you want to do with the marker:</string>
    <string name="REMOVE">REMOVE</string>
    <string name="CANCEL">CANCEL</string>
    <string name="CHANGER">CHANGE</string>
    <string name="SAVE">SAVE</string>
    <string name="change_mark">changer snippet of marker</string>
    <string name="enternamemarker">Enter name of marker</string>
    <string name="hint">Enter a description of the marker:</string>
    <string name="save" />
    <string name="snippet" />
    <string name="list_of_markers">List of markers</string>
    <string name="new_marker">New marker</string>
    <string name="coordinates">Coordinates</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="popup_menu_edit">Edit</string>
    <string name="popup_menu_remove">Remove</string>
    <string name="my_places">My places</string>

    <string name="permission_unavailable">Permission unavailable</string>
    <string name="save_button">SAVE</string>
    <string name="cancellation">The changes won\'t be saved, do you really want to log out?</string>
    <string name="dialog_positive_button" translatable="false">OK</string>
    <string name="error_saving">Saving failed. Try again later.</string>
    <string name="error_loading">Loading failed. Try again later.</string>
    <string name="want_to_visit">Want to visit</string>
    <string name="permission_requied">Permission is required for correct functioning</string>
    <string name="kremlin">The Moscow Kremlin</string>
    <string name="marker">Marker</string>
    <string name="your_palaces">Your places</string>
</resources>