<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Surface"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary2"
            app:title="@string/edit_marker" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.AddMarkerFragment">

        <View
            android:id="@+id/background"
            android:layout_width="324dp"
            android:layout_height="48dp"
            android:layout_marginTop="118dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/coordinates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="8dp"
            android:text="@string/coordinates"
            android:textSize="18sp"
            android:textStyle="italic"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_marker" />

        <TextView
            android:id="@+id/latitude_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/latitude"
            android:textColor="@color/black"
            android:textSize="8sp"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/coordinates"
            app:layout_constraintTop_toBottomOf="@id/edit_marker" />


        <TextView
            android:id="@+id/longitude_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:text="@string/longitude"
            android:textColor="@color/black"
            android:textSize="8sp"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/coordinates"
            app:layout_constraintTop_toBottomOf="@+id/latitude_text" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginTop="32dp"
            android:text="@string/CANCEL"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/background" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="68dp"
            android:text="@string/SAVE"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/background" />

        <EditText
            android:id="@+id/edit_marker"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/new_marker_title"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/background"
            app:layout_constraintStart_toStartOf="@+id/background"
            app:layout_constraintTop_toTopOf="@+id/background" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>